parac/preprocessor/parser/ParaCPreProcessorParser.py
# Generated from ./grammar/ParaCPreProcessor.g4 by ANTLR 4.9.2
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class ParaCPreProcessorParser(Parser):
    grammarFileName = "ParaCPreProcessor.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                    "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                    "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                    "<INVALID>", "<INVALID>", "<INVALID>", "'GCC'", "'PARAC'"]

    symbolicNames = ["<INVALID>", "Include", "Define", "Undefine", "If",
                     "Else", "IfDefined", "IfNotDefined", "ElIfNotDefined",
                     "ElIfDefined", "ElseIf", "EndIf", "Error", "Pragma",
                     "Line", "GCCParacPrefix", "PragmaParacPrefix",
                     "Identifier",
                     "LibStringLiteral", "StringLiteral", "DigitSequence",
                     "AsmBlock", "Whitespace", "Newline",
                     "NonPreProcessorItemSequence"]

    RULE_compilationUnit = 0
    RULE_translationUnit = 1
    RULE_externalItem = 2
    RULE_nonPreProcessorItemSequence = 3
    RULE_preProcessorDirective = 4
    RULE_selectionPreProcessorDirective = 5
    RULE_startOfSelectionBlock = 6
    RULE_selectionDirectiveAlternatives = 7
    RULE_selectionElseDirective = 8
    RULE_selectionBlock = 9
    RULE_includeDirective = 10
    RULE_fileIncludeDirective = 11
    RULE_computedIncludeDirective = 12
    RULE_ifNotDefinedDirective = 13
    RULE_ifDefinedDirective = 14
    RULE_elIfNotDefinedDirective = 15
    RULE_elIfDefinedDirective = 16
    RULE_ifDirective = 17
    RULE_elIfDirective = 18
    RULE_elseDirective = 19
    RULE_endIfDirective = 20
    RULE_pragmaDirective = 21
    RULE_errorDirective = 22
    RULE_undefDirective = 23
    RULE_complexDefineDirective = 24
    RULE_libIncludeDirective = 25
    RULE_stringIncludeDirective = 26
    RULE_lineDirective = 27
    RULE_nonPreProcessorItem = 28
    RULE_anySequence = 29
    RULE_preProcessorEnd = 30

    ruleNames = ["compilationUnit", "translationUnit", "externalItem",
                 "nonPreProcessorItemSequence", "preProcessorDirective",
                 "selectionPreProcessorDirective", "startOfSelectionBlock",
                 "selectionDirectiveAlternatives", "selectionElseDirective",
                 "selectionBlock", "includeDirective", "fileIncludeDirective",
                 "computedIncludeDirective", "ifNotDefinedDirective",
                 "ifDefinedDirective", "elIfNotDefinedDirective",
                 "elIfDefinedDirective",
                 "ifDirective", "elIfDirective", "elseDirective",
                 "endIfDirective",
                 "pragmaDirective", "errorDirective", "undefDirective",
                 "complexDefineDirective", "libIncludeDirective",
                 "stringIncludeDirective",
                 "lineDirective", "nonPreProcessorItem", "anySequence",
                 "preProcessorEnd"]

    EOF = Token.EOF
    Include = 1
    Define = 2
    Undefine = 3
    If = 4
    Else = 5
    IfDefined = 6
    IfNotDefined = 7
    ElIfNotDefined = 8
    ElIfDefined = 9
    ElseIf = 10
    EndIf = 11
    Error = 12
    Pragma = 13
    Line = 14
    GCCParacPrefix = 15
    PragmaParacPrefix = 16
    Identifier = 17
    LibStringLiteral = 18
    StringLiteral = 19
    DigitSequence = 20
    AsmBlock = 21
    Whitespace = 22
    Newline = 23
    NonPreProcessorItemSequence = 24

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA,
                                          self.sharedContextCache)
        self._predicates = None

    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None,
                     invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ParaCPreProcessorParser.EOF, 0)

        def translationUnit(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.TranslationUnitContext, 0)

        def getRuleIndex(self):
            return ParaCPreProcessorParser.RULE_compilationUnit

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCompilationUnit"):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCompilationUnit"):
                listener.exitCompilationUnit(self)

    def compilationUnit(self):

        localctx = ParaCPreProcessorParser.CompilationUnitContext(self,
                                                                  self._ctx,
                                                                  self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & (
                    (1 << ParaCPreProcessorParser.Include) | (
                    1 << ParaCPreProcessorParser.Define) | (
                            1 << ParaCPreProcessorParser.Undefine) | (
                            1 << ParaCPreProcessorParser.If) | (
                            1 << ParaCPreProcessorParser.IfDefined) | (
                            1 << ParaCPreProcessorParser.IfNotDefined) | (
                            1 << ParaCPreProcessorParser.Error) | (
                            1 << ParaCPreProcessorParser.Pragma) | (
                            1 << ParaCPreProcessorParser.Line) | (
                            1 << ParaCPreProcessorParser.Identifier) | (
                            1 << ParaCPreProcessorParser.StringLiteral) | (
                            1 << ParaCPreProcessorParser.DigitSequence) | (
                            1 << ParaCPreProcessorParser.Whitespace) | (
                            1 << ParaCPreProcessorParser.Newline) | (
                            1 << ParaCPreProcessorParser.NonPreProcessorItemSequence))) != 0):
                self.state = 62
                self.translationUnit()

            self.state = 65
            self.match(ParaCPreProcessorParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TranslationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None,
                     invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def externalItem(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    ParaCPreProcessorParser.ExternalItemContext)
            else:
                return self.getTypedRuleContext(
                    ParaCPreProcessorParser.ExternalItemContext, i)

        def getRuleIndex(self):
            return ParaCPreProcessorParser.RULE_translationUnit

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTranslationUnit"):
                listener.enterTranslationUnit(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTranslationUnit"):
                listener.exitTranslationUnit(self)

    def translationUnit(self):

        localctx = ParaCPreProcessorParser.TranslationUnitContext(self,
                                                                  self._ctx,
                                                                  self.state)
        self.enterRule(localctx, 2, self.RULE_translationUnit)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 67
                self.externalItem()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & (
                        (1 << ParaCPreProcessorParser.Include) | (
                        1 << ParaCPreProcessorParser.Define) | (
                                1 << ParaCPreProcessorParser.Undefine) | (
                                1 << ParaCPreProcessorParser.If) | (
                                1 << ParaCPreProcessorParser.IfDefined) | (
                                1 << ParaCPreProcessorParser.IfNotDefined) | (
                                1 << ParaCPreProcessorParser.Error) | (
                                1 << ParaCPreProcessorParser.Pragma) | (
                                1 << ParaCPreProcessorParser.Line) | (
                                1 << ParaCPreProcessorParser.Identifier) | (
                                1 << ParaCPreProcessorParser.StringLiteral) | (
                                1 << ParaCPreProcessorParser.DigitSequence) | (
                                1 << ParaCPreProcessorParser.Whitespace) | (
                                1 << ParaCPreProcessorParser.Newline) | (
                                1 << ParaCPreProcessorParser.NonPreProcessorItemSequence))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExternalItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None,
                     invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def preProcessorDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.PreProcessorDirectiveContext, 0)

        def nonPreProcessorItemSequence(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.NonPreProcessorItemSequenceContext, 0)

        def Newline(self):
            return self.getToken(ParaCPreProcessorParser.Newline, 0)

        def getRuleIndex(self):
            return ParaCPreProcessorParser.RULE_externalItem

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExternalItem"):
                listener.enterExternalItem(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExternalItem"):
                listener.exitExternalItem(self)

    def externalItem(self):

        localctx = ParaCPreProcessorParser.ExternalItemContext(self, self._ctx,
                                                               self.state)
        self.enterRule(localctx, 4, self.RULE_externalItem)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ParaCPreProcessorParser.Include,
                         ParaCPreProcessorParser.Define,
                         ParaCPreProcessorParser.Undefine,
                         ParaCPreProcessorParser.If,
                         ParaCPreProcessorParser.IfDefined,
                         ParaCPreProcessorParser.IfNotDefined,
                         ParaCPreProcessorParser.Error,
                         ParaCPreProcessorParser.Pragma,
                         ParaCPreProcessorParser.Line]:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.preProcessorDirective()
                pass
            elif token in [ParaCPreProcessorParser.Identifier,
                           ParaCPreProcessorParser.StringLiteral,
                           ParaCPreProcessorParser.DigitSequence,
                           ParaCPreProcessorParser.Whitespace,
                           ParaCPreProcessorParser.NonPreProcessorItemSequence]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.nonPreProcessorItemSequence()
                pass
            elif token in [ParaCPreProcessorParser.Newline]:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.match(ParaCPreProcessorParser.Newline)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NonPreProcessorItemSequenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None,
                     invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nonPreProcessorItem(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    ParaCPreProcessorParser.NonPreProcessorItemContext)
            else:
                return self.getTypedRuleContext(
                    ParaCPreProcessorParser.NonPreProcessorItemContext, i)

        def getRuleIndex(self):
            return ParaCPreProcessorParser.RULE_nonPreProcessorItemSequence

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNonPreProcessorItemSequence"):
                listener.enterNonPreProcessorItemSequence(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNonPreProcessorItemSequence"):
                listener.exitNonPreProcessorItemSequence(self)

    def nonPreProcessorItemSequence(self):

        localctx = ParaCPreProcessorParser.NonPreProcessorItemSequenceContext(
            self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nonPreProcessorItemSequence)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            _alt = 1
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 77
                    self.nonPreProcessorItem()

                else:
                    raise NoViableAltException(self)
                self.state = 80
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 3, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PreProcessorDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None,
                     invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def includeDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.IncludeDirectiveContext, 0)

        def selectionPreProcessorDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.SelectionPreProcessorDirectiveContext,
                0)

        def complexDefineDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.ComplexDefineDirectiveContext, 0)

        def errorDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.ErrorDirectiveContext, 0)

        def pragmaDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.PragmaDirectiveContext, 0)

        def lineDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.LineDirectiveContext, 0)

        def undefDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.UndefDirectiveContext, 0)

        def getRuleIndex(self):
            return ParaCPreProcessorParser.RULE_preProcessorDirective

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPreProcessorDirective"):
                listener.enterPreProcessorDirective(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPreProcessorDirective"):
                listener.exitPreProcessorDirective(self)

    def preProcessorDirective(self):

        localctx = ParaCPreProcessorParser.PreProcessorDirectiveContext(self,
                                                                        self._ctx,
                                                                        self.state)
        self.enterRule(localctx, 8, self.RULE_preProcessorDirective)
        try:
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ParaCPreProcessorParser.Include]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.includeDirective()
                pass
            elif token in [ParaCPreProcessorParser.If,
                           ParaCPreProcessorParser.IfDefined,
                           ParaCPreProcessorParser.IfNotDefined]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.selectionPreProcessorDirective()
                pass
            elif token in [ParaCPreProcessorParser.Define]:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.complexDefineDirective()
                pass
            elif token in [ParaCPreProcessorParser.Error]:
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.errorDirective()
                pass
            elif token in [ParaCPreProcessorParser.Pragma]:
                self.enterOuterAlt(localctx, 5)
                self.state = 86
                self.pragmaDirective()
                pass
            elif token in [ParaCPreProcessorParser.Line]:
                self.enterOuterAlt(localctx, 6)
                self.state = 87
                self.lineDirective()
                pass
            elif token in [ParaCPreProcessorParser.Undefine]:
                self.enterOuterAlt(localctx, 7)
                self.state = 88
                self.undefDirective()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectionPreProcessorDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None,
                     invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def startOfSelectionBlock(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.StartOfSelectionBlockContext, 0)

        def endIfDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.EndIfDirectiveContext, 0)

        def selectionDirectiveAlternatives(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    ParaCPreProcessorParser.SelectionDirectiveAlternativesContext)
            else:
                return self.getTypedRuleContext(
                    ParaCPreProcessorParser.SelectionDirectiveAlternativesContext,
                    i)

        def selectionElseDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.SelectionElseDirectiveContext, 0)

        def getRuleIndex(self):
            return ParaCPreProcessorParser.RULE_selectionPreProcessorDirective

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelectionPreProcessorDirective"):
                listener.enterSelectionPreProcessorDirective(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelectionPreProcessorDirective"):
                listener.exitSelectionPreProcessorDirective(self)

    def selectionPreProcessorDirective(self):

        localctx = ParaCPreProcessorParser.SelectionPreProcessorDirectiveContext(
            self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_selectionPreProcessorDirective)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.startOfSelectionBlock()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & (
                    (1 << ParaCPreProcessorParser.ElIfNotDefined) | (
                    1 << ParaCPreProcessorParser.ElIfDefined) | (
                            1 << ParaCPreProcessorParser.ElseIf))) != 0):
                self.state = 92
                self.selectionDirectiveAlternatives()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == ParaCPreProcessorParser.Else:
                self.state = 98
                self.selectionElseDirective()

            self.state = 101
            self.endIfDirective()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StartOfSelectionBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None,
                     invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectionBlock(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.SelectionBlockContext, 0)

        def ifDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.IfDirectiveContext, 0)

        def ifDefinedDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.IfDefinedDirectiveContext, 0)

        def ifNotDefinedDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.IfNotDefinedDirectiveContext, 0)

        def getRuleIndex(self):
            return ParaCPreProcessorParser.RULE_startOfSelectionBlock

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStartOfSelectionBlock"):
                listener.enterStartOfSelectionBlock(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStartOfSelectionBlock"):
                listener.exitStartOfSelectionBlock(self)

    def startOfSelectionBlock(self):

        localctx = ParaCPreProcessorParser.StartOfSelectionBlockContext(self,
                                                                        self._ctx,
                                                                        self.state)
        self.enterRule(localctx, 12, self.RULE_startOfSelectionBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ParaCPreProcessorParser.If]:
                self.state = 103
                self.ifDirective()
                pass
            elif token in [ParaCPreProcessorParser.IfDefined]:
                self.state = 104
                self.ifDefinedDirective()
                pass
            elif token in [ParaCPreProcessorParser.IfNotDefined]:
                self.state = 105
                self.ifNotDefinedDirective()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 108
            self.selectionBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectionDirectiveAlternativesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None,
                     invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectionBlock(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.SelectionBlockContext, 0)

        def elIfDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.ElIfDirectiveContext, 0)

        def elIfDefinedDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.ElIfDefinedDirectiveContext, 0)

        def elIfNotDefinedDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.ElIfNotDefinedDirectiveContext, 0)

        def getRuleIndex(self):
            return ParaCPreProcessorParser.RULE_selectionDirectiveAlternatives

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelectionDirectiveAlternatives"):
                listener.enterSelectionDirectiveAlternatives(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelectionDirectiveAlternatives"):
                listener.exitSelectionDirectiveAlternatives(self)

    def selectionDirectiveAlternatives(self):

        localctx = ParaCPreProcessorParser.SelectionDirectiveAlternativesContext(
            self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_selectionDirectiveAlternatives)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ParaCPreProcessorParser.ElseIf]:
                self.state = 110
                self.elIfDirective()
                pass
            elif token in [ParaCPreProcessorParser.ElIfDefined]:
                self.state = 111
                self.elIfDefinedDirective()
                pass
            elif token in [ParaCPreProcessorParser.ElIfNotDefined]:
                self.state = 112
                self.elIfNotDefinedDirective()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 115
            self.selectionBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectionElseDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None,
                     invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elseDirective(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.ElseDirectiveContext, 0)

        def selectionBlock(self):
            return self.getTypedRuleContext(
                ParaCPreProcessorParser.SelectionBlockContext, 0)

        def getRuleIndex(self):
            return ParaCPreProcessorParser.RULE_selectionElseDirective

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelectionElseDirective"):
                listener.enterSelectionElseDirective(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelectionElseDirective"):
                listener.exitSelectionElseDirective(self)

    def selectionElseDirective(self):

        localctx = ParaCPreProcessorParser.SelectionElseDirectiveContext(self,
                                                                         self._ctx,
                                                                         self.state)
        self.enterRule(localctx, 16, self.RULE_selectionElseDirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.elseDirective()
            self.state = 118
            self.selectionBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectionBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None,
                     invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nonPreProcessorItemSequence(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    ParaCPreProcessorParser.NonPreProcessorItemSequenceContext)
            else:
                return self.getTypedRuleContext(
                    ParaCPreProcessorParser.NonPreProcessorItemSequenceContext,
                    i)

        def Newline(self, i: int = None):
            if i is None:
                return self.getTokens(ParaCPreProcessorParser.Newline)
            else:
                return self.getToken(ParaCPreProcessorParser.Newline, i)

        def selectionPreProcessorDirective(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    ParaCPreProcessorParser.SelectionPreProcessorDirectiveContext)
            else:
                return self.getTypedRuleContext(
                    ParaCPreProcessorParser.SelectionPreProcessorDirectiveContext,
                    i)

        def getRuleIndex(self):
            return ParaCPreProcessorParser.RULE_selectionBlock

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelectionBlock"):
                listener.enterSelectionBlock(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelectionBlock"):
                listener.exitSelectionBlock(self)

    def selectionBlock(self):
